crates/aion-awl/tests/fixtures/rev2/step-bodies/invalid/unknown_action.awl
//! Greet a name and shout the greeting.
workflow unknown_action
  input name: String
  outcome shouted: type Shouted, route success

type Greeting { greeting: String }
type Shouted  { text: String }

worker voice
  action greet(name: String) -> Greeting
  action shout(text: String) -> Shouted

step greet
  greet(name: name) -> greeting
  // defect: no action `polish` is declared on any worker
  polish(note: name)

step shout
  shout(text: greeting.greeting) -> loud
  loud |> route shouted
